[gd_scene load_steps=2 format=3 uid="uid://bb1hkgpvpke6e"]

[ext_resource type="Script" uid="uid://bq74aphkt3lpu" path="res://scenes/menus/vis_playback/vis_playback.gd" id="1_2frtt"]

[node name="VisPlayback" type="Control"]
custom_minimum_size = Vector2(0, 16)
layout_mode = 3
anchors_preset = 0
offset_right = 840.0
offset_bottom = 16.0
script = ExtResource("1_2frtt")

[node name="PlaySlider" type="HSlider" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 16.0
grow_horizontal = 2
focus_mode = 0
max_value = 1.0
step = 0.01

[connection signal="drag_ended" from="PlaySlider" to="." method="_on_play_slider_drag_ended"]
[connection signal="drag_started" from="PlaySlider" to="." method="_on_play_slider_drag_started"]
